--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 		<div id="portfolio" name="portfolio">
 		<br>
 			<div class="row white">
-				<h1 class="fade-down centered">SOME OF WHAT WE HAVE DONE</h1>
+				<h1 class="fade-down centered">READ MORE AMAZING STORIES & THEORIES</h1>
 				<hr class="fade-down title-mb">
 			</div><!-- /row -->
 			<div class="">
